--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@parcel/transformer-sass": "^2.14.4",
     "parcel": "^2.14.4",
-    "sharp": "^0.34.1"
+    "sharp": "^0.33.5",
+    "svgo": "^3.3.2"
   }
 }
